--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,14 @@
 	text-align: center;
 }
 
+.submit{
+	width: 25px;
+}
+
+.navig input{
+	text-align: center;
+}
+
 .navig{
 	text-align: center;
 }
